src/objects/Service_Assignment_Provider_JO__c.object
<CustomObject>
    <fields>
        <fullName>Disregard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disregard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Service_Assignment_Provider_JOs</relationshipLabel>
        <relationshipName>Service_Assignment_Provider_JOs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Services_Provided__c</fullName>
        <label>Services Provided</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Service Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TMN_Provider__c</fullName>
        <label>TMN Provider</label>
        <referenceTo>TMN_Provider__c</referenceTo>
        <relationshipLabel>Service_Assignment_Provider_JOs</relationshipLabel>
        <relationshipName>Service_Assignment_Provider_JOs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Service_Assignment_Provider_JO</label>
    <nameField>
        <displayFormat>PJO-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service_Assignment_Provider_JOs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>